# PubPolishPy

./: .gitignore  PyTexParseTest.ipynb  README.md  pyproject.toml  testFolder1  testFolder2
src/PubPolishPy/cli/: __init__.py  pubPolish.py
src/PubPolishPy/graph/: __init__.py  graph.py
src/PubPolishPy/parsers/: ApJ.py  ArXiv.py  __init__.py  generic.py
src/PubPolishPy/plugins/: __init__.py  plugin.py
