[build-system]
requires = ["numpy", "setuptools", "setuptools-scm", "wheel", "scikit-build", "cmake", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name="PubPolishPy"
authors = [
	{name = "Emily M. Boudreaux", email="emily@boudreauxmail.com"},
	]
description="Automatic Refactor for LaTeX documents for multiple submission."
readme="README.md"
requires-python = ">=3.7"
keywords=["LaTeX"]
license = { file = "LICENSE" }
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	]
dependencies = [
  "networkx",
  "TexSoup"
	]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tboudreaux/PubPolishPy"

[tool.setuptools.dynamic]
version = {attr = "PubPolishPy.__version__"}

[project.scripts]
pubPolish = "PubPolishPy.cli:cli_migrate"

